--- a/src/com/dasflash/soundcloud/scup/view/skins/ListSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/ListSkin.mxml
@@ -4,17 +4,12 @@
 	  alpha.disabled="0.5"> 
 
     <fx:Metadata>
-    <![CDATA[ 
-	/** 
-	 * @copy spark.skins.default.ApplicationSkin#hostComponent
-	 */
     	[HostComponent("spark.components.List")]
-    ]]>
     </fx:Metadata> 
     
     <fx:Script>
 		<![CDATA[
-			import com.dasflash.soundcloud.scup.view.TrackListItemRenderer;
+			import com.dasflash.soundcloud.scup.view.components.TrackListItemRenderer;
 			
 			import mx.collections.ArrayCollection;
 			import mx.events.StateChangeEvent;
