--- a/src/com/dasflash/soundcloud/scup/view/skins/SimpleProgressBarSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/SimpleProgressBarSkin.mxml
@@ -1,64 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Skin
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/mx"
-	>
-	
-	
+	xmlns:mx="library://ns.adobe.com/flex/mx">
+
+
 	<fx:Metadata>
-		<![CDATA[ 
-		[HostComponent("com.dasflash.soundcloud.scup.view.SimpleProgressBar")]
-		]]>
+		[HostComponent("com.dasflash.soundcloud.scup.view.components.SimpleProgressBar")]
 	</fx:Metadata>
-	
-	<fx:Script>
-		<![CDATA[
-			
-			/* import flash.events.Event;
-			import mx.events.FlexEvent;
-			
-			protected function creationCompleteHandler(event:FlexEvent):void
-			{
-				addEventListener(Event.ENTER_FRAME, enterFrameHandler);
-				hostComponent.addEventListener(Event.COMPLETE, completeHandler);
-			}
-			
-			protected function enterFrameHandler(event:Event):void
-			{
-				bmpFill.x -= .5;
-			}
-			
-			protected function completeHandler(event:Event):void
-			{
-				removeEventListener(Event.ENTER_FRAME, enterFrameHandler);
-			} */
-			
-		]]>
-	</fx:Script>
-	
+
+
 	<!-- layer 1: track -->
-	<s:Rect id="track" left="0" right="0" top="0" bottom="0" radiusX="1" radiusY="1" height="23">
+	<s:Rect id="track"
+		left="0"
+		right="0"
+		top="0"
+		bottom="0"
+		radiusX="1"
+		radiusY="1"
+		height="23">
 		<s:fill>
 			<mx:SolidColor color="#F6F6F6"/>
 		</s:fill>
 		<s:stroke>
-			<mx:SolidColorStroke weight="1" color="#c2c2c2"/>
+			<mx:SolidColorStroke weight="1"
+				color="#c2c2c2"/>
 		</s:stroke>
 	</s:Rect>
-	
+
 	<!-- layer 2: bar -->
-	<s:Rect top="1" left="1" bottom="1" radiusX="1" radiusY="1" alpha=".5"
-			width="{track.width*(hostComponent.percentComplete/100)}">
+	<s:Rect top="1"
+		left="1"
+		bottom="1"
+		radiusX="1"
+		radiusY="1"
+		alpha=".5"
+		width="{track.width*(hostComponent.percentComplete/100)}">
 		<s:fill>
 			<s:LinearGradient rotation="-90">
-				<s:GradientEntry color="#a0a0a0" ratio="0" alpha="1"/>
-				<s:GradientEntry color="#b1b1b1" ratio="0.3" alpha="1"/>
-				<s:GradientEntry color="#b1b1b1" ratio="0.8" alpha="1"/>
-				<s:GradientEntry color="#bfbfbf" ratio="1" alpha="1"/>
+				<s:GradientEntry color="#a0a0a0"
+					ratio="0"
+					alpha="1"/>
+				<s:GradientEntry color="#b1b1b1"
+					ratio="0.3"
+					alpha="1"/>
+				<s:GradientEntry color="#b1b1b1"
+					ratio="0.8"
+					alpha="1"/>
+				<s:GradientEntry color="#bfbfbf"
+					ratio="1"
+					alpha="1"/>
 			</s:LinearGradient>
-			<!--<s:BitmapFill id="bmpFill" source="@Embed('assets/progressbar_fill.png')" fillMode="repeat"/>-->
 		</s:fill>
 	</s:Rect>
-	
+
 </s:Skin>
