--- a/src/com/dasflash/soundcloud/scup/view/skins/StatusBarSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/StatusBarSkin.mxml
@@ -1,54 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Skin
-	xmlns:fx="http://ns.adobe.com/mxml/2009" 
+<s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/mx"
-	>
-	
-	<fx:Metadata>
-		
-		[Event(type="com.dasflash.soundcloud.scup.events.ScupEvent", name="browseFiles")]
-		[Event(type="com.dasflash.soundcloud.scup.events.ScupEvent", name="cancelSet")]
-		[Event(type="com.dasflash.soundcloud.scup.events.ScupEvent", name="saveSet")]
-		
-	</fx:Metadata>
-	
-	<fx:Script>
-		<![CDATA[
-			import com.dasflash.soundcloud.scup.events.ScupEvent;
-		]]>
-	</fx:Script>
-	
+	xmlns:mx="library://ns.adobe.com/flex/mx">
+
 	<fx:Metadata>
     	[HostComponent("com.dasflash.soundcloud.scup.view.StatusBar")]
     </fx:Metadata>
 
-	<s:Line xTo="{width}">
+	<s:Line width="100%">
 		<s:stroke>
-			<mx:SolidColorStroke weight="1" color="#404040"/>
+			<s:SolidColorStroke color="#404040"/>
 		</s:stroke>
 	</s:Line>
-	
-	<s:Rect width="100%" height="100%" top="1">
+
+	<s:Rect width="100%"
+		height="100%"
+		top="1">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="#bdbdbd" />
-				<s:GradientEntry color="#969696" />
+				<s:GradientEntry color="#bdbdbd"/>
+				<s:GradientEntry color="#969696"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
-		
-	<s:Button id="addTracksButton" label="+ Track(s)" top="6" bottom="6" left="12" styleName="standardButton"
-		click="dispatchEvent(new ScupEvent(ScupEvent.BROWSE_FILES))"/>
-	
-	<s:HGroup  top="6" bottom="6" right="16">
-		
-		<s:Button id="cancelButton" label="Cancel" styleName="standardButton"
-				  click="dispatchEvent(new ScupEvent(ScupEvent.CANCEL_SET))"/>
-			
-		<s:Button id="SendSetButton" label="Send Set" enabled="{hostComponent.allUploadsCompleted}" styleName="standardButton"
-			click="dispatchEvent(new ScupEvent(ScupEvent.SAVE_SET))" />
-		
+
+	<s:Button id="addTracksButton"
+		label="+ Track(s)"
+		top="6"
+		bottom="6"
+		left="12"
+		styleName="standardButton"
+		click="hostComponent.browseFiles()"/>
+
+	<s:HGroup top="6"
+		bottom="6"
+		right="16">
+
+		<s:Button id="cancelButton"
+			label="Cancel"
+			styleName="standardButton"
+			click="hostComponent.cancelSet()"/>
+
+		<s:Button id="SendSetButton"
+			label="Send Set"
+			enabled="{hostComponent.allUploadsCompleted}"
+			styleName="standardButton"
+			click="hostComponent.saveSet()"/>
+
 	</s:HGroup>
-	
+
 </s:Skin>
