--- a/src/com/dasflash/soundcloud/scup/view/skins/TextInputSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/TextInputSkin.mxml
@@ -1,67 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-	  alpha.disabled="0.5">
+<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+	alpha.disabled="0.5">
 
-    <fx:Metadata>
-    <![CDATA[ 
+	<fx:Metadata>
     	[HostComponent("spark.components.TextInput")]
-    ]]>
-    </fx:Metadata> 
-    
-    <fx:Script>
-    	<![CDATA[
-    	[Bindable] 
-	        public  var hasFocus:Boolean;
-	        
-	        /* Define the skin elements that should not be colorized. */
-	        static private const exclusions:Array = ["background", "textView"];
-		
-			/** 
+    </fx:Metadata>
+
+	<fx:Script>
+		<![CDATA[
+			[Bindable]
+			public var hasFocus:Boolean;
+
+			/* Define the skin elements that should not be colorized. */
+			static private const exclusions:Array=["background", "textView"];
+
+			/**
 			 * @copy spark.skins.SparkSkin#colorizeExclusions
-			 */		
-	        override public function get colorizeExclusions():Array {return exclusions;}
-	        
-	        /* Define the content fill items that should be colored by the "contentBackgroundColor" style. */
-	        static private const contentFill:Array = ["bgFill"];
-	
-	        /**
-	         * @inheritDoc
-	         */
-	        override public function get contentItems():Array {return contentFill};
+			 */
+			override public function get colorizeExclusions():Array
+			{
+				return exclusions;
+			}
 
-    		protected function textView_focusInHandler(event:FocusEvent):void
-    		{
-    			hasFocus = true;
+			/* Define the content fill items that should be colored by the "contentBackgroundColor" style. */
+			static private const contentFill:Array=["bgFill"];
+
+			/**
+			 * @inheritDoc
+			 */
+			override public function get contentItems():Array
+			{
+				return contentFill
+			}
+			;
+
+			protected function textView_focusInHandler(event:FocusEvent):void
+			{
+				hasFocus=true;
 				textDisplay.selectAll();
-    		}
+			}
 
-    		protected function textView_focusOutHandler(event:FocusEvent):void
-    		{
-    			hasFocus = false;
-    		}
+			protected function textView_focusOutHandler(event:FocusEvent):void
+			{
+				hasFocus=false;
+			}
+		]]>
 
-    	]]>
+	</fx:Script>
 
-    </fx:Script>
-    
-    <s:states>
-        <s:State name="normal"/>
-        <s:State name="disabled"/>
-    </s:states>
-    
-    <!--- Defines the appearance of the TextInput component's background. -->
-    <s:Rect id="background" left="1" right="1" top="1" bottom="2" includeIn="normal" alpha="{int(hasFocus)}">
-        <s:fill>
-            <s:SolidColor id="bgFill" />
-        </s:fill>
-    </s:Rect>
-	
+	<s:states>
+		<s:State name="normal"/>
+		<s:State name="disabled"/>
+	</s:states>
+
+	<!--- Defines the appearance of the TextInput component's background. -->
+	<s:Rect id="background"
+		left="1"
+		right="1"
+		top="1"
+		bottom="2"
+		includeIn="normal"
+		alpha="{int(hasFocus)}">
+		<s:fill>
+			<s:SolidColor id="bgFill"/>
+		</s:fill>
+	</s:Rect>
+
 	<!-- text -->
-    <s:RichEditableText id="textDisplay"
-              focusIn="textView_focusInHandler(event)" focusOut="textView_focusOutHandler(event)"
-			  lineBreak="explicit"
-              left="1" right="1" top="1" bottom="1" 
-			  paddingLeft="3" paddingTop="5"
-              paddingRight="3" paddingBottom="3"/>	
+	<s:RichEditableText id="textDisplay"
+		focusIn="textView_focusInHandler(event)"
+		focusOut="textView_focusOutHandler(event)"
+		lineBreak="explicit"
+		left="1"
+		right="1"
+		top="1"
+		bottom="1"
+		paddingLeft="3"
+		paddingTop="5"
+		paddingRight="3"
+		paddingBottom="3"/>
 
 </s:SparkSkin>
